@@ -1,4 +1,4 @@
-DIST python-daemon-2.1.2.tar.gz 76176 SHA256 261c859be5c12ae7d4286dc6951e87e9e1a70a882a8b41fd926efc1ec4214f73 SHA512 28ae118fd652a0a26524215568df0b16264e3a844640fe47f0a08c45c7a16be1b60d78293c2fc13edfe1402a8b5dcd72ec11101c3b53e5b66f232b7e21d5d346 WHIRLPOOL bbd457e0817ae464a423697c990348ece262a737b6a0b077e6e1e888916bc0db406958c7ef556148630e38bada9a70d5ce674bd6da88dca8569b95f9c6901010
-EBUILD python-daemon-2.1.2-r1.ebuild 800 SHA256 f5f1a5c93646db8a79ac7c713676de7e088f6008181360d23c6ae09e11f60d17 SHA512 480362d845cfd2bb80201ab820960db4dbecd418b4462e8bca5c1cca47fb14216c03f28f4115bfe21f81992898536ad916be28d7d31da9b231506532c7a9a8f8 WHIRLPOOL 975915862a83ce961f9127371bea3a8f67ca8ba0f9cbb504be5e4c5ba19317d8d8fea39176f89e94f46211f730f62bc2d79b5ff90ffc1b3a9ea34ea5d128fafe
-MISC ChangeLog 240 SHA256 b9493a76489c5ba8d16522ba27297b2f054ab57817ef492513240cf73bdd6559 SHA512 293f786a92a74060c338d7b427f5658502b2456b059057b110ccb2993c714d164c605a1592e032b6063f74ddb6d117cdc5365177a9d8a5a2de0ce66f71a97995 WHIRLPOOL d60a8ac71246f270a6a66979d041ed67059fe38a9a58d1cc95c05a6fd61d6b698717d8f0eea948d2a00a3074a9e8c3d6d064d746062a56db2bd06b9192f276fe
+DIST python-daemon-2.2.4.tar.gz 80775 SHA256 57c84f50a04d7825515e4dbf3a31c70cc44414394a71608dee6cfde469e81766 SHA512 9a7a4e23e126f05e4c1c503f15401cddd758c5f9195c370997060ca1bbfe71cc51d82d3ae16bcf0023c28fa50b0b8d6cd406e515b27725ffa9fec10fde3ed64a WHIRLPOOL 55ca51c8957fffec858f52b153817149033386d99eb84292067f0234f5b88f22b1f599ac74bac6820a49a0cc25f4270834c51917e472c5b04fc1f2178d6775ba
+EBUILD python-daemon-2.2.4.ebuild 728 SHA256 787a5025bad6cf2201c52c1f79b6cb160794103afe44eeac150af946939da49f SHA512 cdc0be7d9ba4da325398045fe0a3d2dd41d16460c2e7475f825db0ecbfb7ec7cb19b207b1e51d70330c9691697417d83367461b1255520a6b63ab1d5e7de6547 WHIRLPOOL 861a625019f829bc9268dba8794a94920c494f89deb2ad180b5c053897617c1db1bd47d3d3ccd5378814e98fc6ace6954458bb6ba08dff1eb982df76a475400c
+MISC ChangeLog 572 SHA256 80cf63a6f6f0707df684943c6a724e90c59556565a1e0c0ed1590992aaaa747a SHA512 fbf9df664bcd96369d31127d87f50854bd97b8bb1626b07ff14710c2061e3307b73ebefc95f25986b895d500c16a61a36ac73ae27ad874691a2a72fbde39c3f9 WHIRLPOOL e1928ffca4cac2b95466a4bc67a79a0c177764959162a4da913440094bc3f72d38210d04b835d6049c015e26b503a5fe8b610adf599f23d4eea93197a132ee39
 MISC metadata.xml 316 SHA256 3cb9349455ab9f302b0dda516be484ee89ccbf5dceb4eec05fd9ff27a6b5765c SHA512 b3b79f6094ec59bc09c2a14e3752edc0722c0e50c9559ac59e6c1355577c1f36ff98ccf6af969d0624b1e6b8b907a7886f6daafb6c0d789a403ec402083b06a4 WHIRLPOOL 362ec246102eee16ab7c3bc0c071c9e11ed8924c6cc5855b6a1d48236e0377e212daccdd03830a5dbab404fa8c775de6201d7727dd531773d0973314b26cc885
